<resources>
    <string name="app_name">Unclinte Veedu</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_user_name">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="Rs">%1$s \u20B9 %2$s</string>


    <string name="expenditure">Expenditure</string>
    <string name="amount">Amount</string>
    <string name="payment_date">Payment Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payee">Payee</string>
    <string name="add">Add</string>
    <string name="error_network">Sorry, something went wrong please try again later...</string>
    <string name="info_success_payment">Expense added successfully</string>
    <string name="ok">Ok</string>
    <string name="label_pick_image_intent">Select or Capture Image</string>
    <string name="permission_camera">Please allow camera and storage permission to upload bill image</string>
    <string name="error_add_expense">Something went wrong not able to add expense at this moment, please try again later.</string>
    <string name="addPayment">Add Payment</string>
    <string name="payment_name">Payment Name</string>
    <string name="expense_date">Expense Date</string>
    <string name="add_expense">Add Expense</string>
    <string name="paid_to">Paid To</string>
    <string name="paid_to_mandatory">Please select paid to user name</string>
    <string name="payee_mandatory">Please select the payee name</string>
    <string name="no_payments">No payments made yet!!</string>
    <string name="no_expenses">No Expenses added yet!!</string>
    <string name="delete">Delete</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="make_payment">Make Payment</string>
</resources>
